@@ -2690,10 +2690,12 @@ def install_default_templates(dbo, removeFirst = False):
     asm3.al.info("creating default templates", "dbupdate.install_default_templates", dbo)
     add_html_template_from_files("animalview")
     add_html_template_from_files("animalviewadoptable")
+    add_html_template_from_files("animalviewcarousel")
     add_html_template_from_files("littlebox")
     add_html_template_from_files("responsive")
     add_html_template_from_files("plain")
     add_html_template_from_files("rss")
+    add_html_template_from_files("slideshow")
     add_document_template_from_file("animal,movement", "adoption_form.html", "/templates", path + "media/templates/adoption_form.html")
     add_document_template_from_file("animal", "cat_assessment_form.html", "/templates", path + "media/templates/cat_assessment_form.html")
     add_document_template_from_file("animal", "cat_cage_card.html", "/templates", path + "media/templates/cat_cage_card.html")
