@@ -1,0 +1,4 @@
+         <div class="carousel-item">
+  	         <div class="carousel-caption">$$ANIMALNAME$$</div>
+             <img class="d-block w-100 img-fluid" src="$$WEBMEDIAFILENAME$$" onError="blankImage(this.id)"> 
+         </div>
