@@ -1,0 +1,26 @@
+	</div>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+<!--
+<hr />
+	<p><b>$$ORGANISATION$$</b><br/>
+	$$ORGANISATIONADDRESS$$<br/>
+    $$ORGANISATIONTOWN$$, $$ORGANISATIONCOUNTY$$ $$ORGANISATIONPOSTCODE$$ <br/>
+	$$ORGANISATIONTELEPHONE$$<br/>
+	</p>
+-->
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+</body>
+</html>
