@@ -1,6 +1,7 @@
 47
 ================
 
+21/06/23 Add slideshow HTML template #905
 21/06/23 Add animalviewcarousel template 
 21/06/23 Option to specify the animalview template in adoptable_js
 21/06/23 PetFinder: Fix new publishing issues with strays
